--- a/package.json
+++ b/package.json
@@ -10,34 +10,34 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~14.3.0",
-    "@angular/cdk": "^14.0.0",
-    "@angular/common": "~14.3.0",
-    "@angular/compiler": "~14.3.0",
-    "@angular/core": "~14.3.0",
-    "@angular/flex-layout": "^14.0.0-beta.40",
-    "@angular/forms": "~14.3.0",
-    "@angular/material": "^14.0.0",
-    "@angular/platform-browser": "~14.3.0",
-    "@angular/platform-browser-dynamic": "~14.3.0",
-    "@angular/router": "~14.3.0",
-    "ngx-spinner": "^14.0.0",
+    "@angular/animations": "~15.2.10",
+    "@angular/cdk": "^15.0.0",
+    "@angular/common": "~15.2.10",
+    "@angular/compiler": "~15.2.10",
+    "@angular/core": "~15.2.10",
+    "@angular/flex-layout": "^15.0.0-beta.42",
+    "@angular/forms": "~15.2.10",
+    "@angular/material": "^15.2.9",
+    "@angular/platform-browser": "~15.2.10",
+    "@angular/platform-browser-dynamic": "~15.2.10",
+    "@angular/router": "~15.2.10",
+    "ngx-spinner": "^15.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~14.2.13",
-    "@angular/cli": "~14.2.13",
-    "@angular/compiler-cli": "~14.3.0",
-    "@types/jasmine": "~3.6.0",
+    "@angular-devkit/build-angular": "~15.2.10",
+    "@angular/cli": "~15.2.10",
+    "@angular/compiler-cli": "~15.2.10",
+    "@types/jasmine": "~4.3.0",
     "@types/node": "^14.17.0",
-    "jasmine-core": "~3.6.0",
+    "jasmine-core": "~4.5.0",
     "karma": "~6.4.2",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "typescript": "~4.7.2"
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
+    "typescript": "~4.9.5"
   }
 }
