--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "^16.2.10",
     "@angular/animations": "~16.2.12",
     "@angular/cdk": "^16.2.12",
     "@angular/common": "~16.2.12",
@@ -21,13 +22,13 @@
     "@angular/platform-browser": "~16.2.12",
     "@angular/platform-browser-dynamic": "~16.2.12",
     "@angular/router": "~16.2.12",
+    "esbuild": "^0.19.7",
     "ngx-spinner": "^16.0.2",
     "rxjs": "~7.5.0",
-    "tslib": "^2.3.1",
+    "tslib": "^2.6.2",
     "zone.js": "~0.13.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~16.2.10",
     "@angular/cli": "~16.2.10",
     "@angular/compiler-cli": "~16.2.12",
     "@types/jasmine": "~4.3.0",
@@ -37,7 +38,6 @@
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~5.1.3"
+    "karma-jasmine-html-reporter": "~2.0.0"
   }
 }
