--- a/angular.json
+++ b/angular.json
@@ -35,6 +35,7 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
+              "./node_modules/ngx-spinner/animations/ball-clip-rotate-multiple.css",
               "src/styles.scss"
             ],
             "scripts": [
@@ -105,6 +106,7 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
+              "./node_modules/ngx-spinner/animations/ball-clip-rotate-multiple.css",
               "src/styles.scss"
             ],
             "scripts": []
