Added Apex charts in angular 16

--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-browser": "~16.2.12",
     "@angular/platform-browser-dynamic": "~16.2.12",
     "@angular/router": "~16.2.12",
+    "apexcharts": "^3.44.0",
     "esbuild": "^0.19.7",
+    "ng-apexcharts": "^1.8.0",
     "ngx-spinner": "^16.0.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.6.2",
