--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@angular-devkit/build-angular": "^17.0.3",
     "@angular/animations": "~17.0.4",
-    "@angular/cdk": "^17.0.4",
+    "@angular/cdk": "^17.0.1",
     "@angular/common": "~17.0.4",
     "@angular/compiler": "~17.0.4",
     "@angular/core": "~17.0.4",
@@ -22,7 +22,9 @@
     "@angular/platform-browser": "~17.0.4",
     "@angular/platform-browser-dynamic": "~17.0.4",
     "@angular/router": "~17.0.4",
+    "apexcharts": "^3.44.0",
     "esbuild": "^0.19.7",
+    "ng-apexcharts": "^1.8.0",
     "ngx-spinner": "^16.0.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.6.2",
